--- a/alerter/src/main/res/layout/alerter_alert_view.xml
+++ b/alerter/src/main/res/layout/alerter_alert_view.xml
@@ -100,7 +100,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvText" />
-
     </android.support.constraint.ConstraintLayout>
 
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/flAlertCustomLayout"
+        style="@style/AlertStyle"
+        android:background="@android:color/darker_gray"
+        android:clickable="true"
+        android:clipToPadding="false"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:paddingStart="@dimen/alerter_padding_default"
+        android:paddingTop="@dimen/alerter_alert_view_padding_top"
+        android:paddingEnd="@dimen/alerter_padding_default"
+        android:paddingBottom="@dimen/alerter_padding_default"
+        android:visibility="gone"
+        tools:visibility="visible" />
 </FrameLayout>
